# CMTools

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CMTools_Software_Introduction.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IFLOW.md  LICENSE  README.md  VERSION_SELECTION_GUIDE.md  WIN7_COMPATIBILITY_SOLUTION.md  WINDOWS7_COMPATIBILITY.md  build-config-options.md  error-report.html  error-report.js  forge.config.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  tool-selector.html  tool-selector.js  user_manual.md  vite.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.trae/rules/: project_rules.md
.vercel/: project.json
DesignStyle/: AppleHumanInterface.md  GoogleMaterialYou.md  MicrosoftFluentDesign.md
scripts/: build-all-platforms.cjs  build-current-system.cjs  build-multi-arch.cjs  build-windows-all.cjs  clean-build-cache.cjs
src/: App.vue  index.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConsentModal.vue
src/config/: analytics.ts
src/utils/: analytics.ts  network-guard.ts
