[package]
name = "cmtools"
version = "2.7.2"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cmtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cmtools"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
md5 = "0.7"

[dependencies]
tauri = { version = "2.9.3", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
thiserror = "1.0"

# Windows 7 兼容性配置已移除以支持Tauri 2.9.x
# [target.'cfg(windows)'.dependencies]
# getrandom = { version = "0.2", features = ["rdrand"] }
# winapi = { version = "0.3", features = ["winnt", "processthreadsapi"] }

